# dstore

./: .gitignore  Makefile.am  Makefile.in  README.md  configure  configure.ac  go.mod  go.sum
bstore/: .gitignore  Makefile.am  Makefile.in  README.md  configure  configure.ac
bstore/bsapi/: bblockexists.go  bcheckblock.go  bdeleteBlock.go  bdeleteblock.go  beraseall.go  bgethello.go  blinklocks.go  blistBlocks.go  blistblocks.go  bloadblock.go  blockapi.go  bpurgeall.go  bsaveBlock.go  bsaveblock.go  dele.go  fileapi.go  getHello.go  hello.go  list.go  listBlocks.go  load.go  save.go  servapi.go  userapi.go  xadduser.go  xcheckUser.go  xdeleteUser.go  xdeleteuser.go  xlistUsers.go  xupdateUser.go  xupdateuser.go
bstore/bscli/: bcli_test.go  bscli.go  bscli_test.go
bstore/bscom/: userdescr.go
bstore/bsfun/: funcblock.go
bstore/bsfunc/: block.go  funcblock.go
bstore/bssrv/: bsconf.go.in  bsmain.go  bsserv.go
bstore/bssrv/bsauth/: bsauth.go
bstore/bssrv/bsbcont/: bcontblock.go  bcontblock_test.go  bcontcomm.go  block.go  block_test.go  bscblock.go  bscblock_test.go  comm.go
bstore/bssrv/bsblock/: bsrec.go  fsblock.go  fsblock_test.go  fscrate.go  fstool.go
bstore/bssrv/bsbreg/: block.go  block_test.go  blocks.go  blocks_test.go  bregblock.go  bregblock_test.go  comm.go
bstore/bssrv/bsconf/: bsconf.go.in
bstore/bssrv/bscont/: bscblock.go  bscblock_test.go  bsccom.go  bsccom_test.go  bscont.go  bscont_test.go  contauth.go  contblock.go  contcomm.go  contfile.go  contserv.go  contuser.go
bstore/bssrv/bsfile/: fsbatch.go  fsbatch_test.go  fsblock.go  fsblock_test.go  fscrate.go  fsfile.go  fsfile_test.go  fstool.go
bstore/bssrv/bsrec/: bsrec.go
bstore/bssrv/bsreg/: bsreg.go  bsreg_test.go  regbatch.go  regbatch_test.go  regblock.go  regblock_test.go  regcomm.go  regfile.go  regfile_test.go  reguser.go  reguser_test.go
bstore/bssrv/bstore/: storeblock.go  storeblock_test.go  storecomm.go  storefile.go  storeuser.go  storeuser_test.go
bstore/bssrv/bsucont/: auth.go  bscuser.go  comm.go  ucontauth.go  ucontcomm.go  ucontuser.go  ucontuser_test.go  user.go  user_test.go
bstore/bssrv/bsureg/: common.go  uregcommon.go  uregusers_test.go  users.go  users_test.go
bstore/bssrv/bsuser/: bsuser.go
bstore/initrc/init.d/: bstored.in
bstore/initrc/rc.d/: bstored.in  bstored.in.single
bstore/rc/: Makefile.am  Makefile.in  bstored.service.in
bstore/rc/rc.d/: bstored.in
dccom/: blkdescr.go
dcfile/: batch.go  batch_test.go  block.go  block_test.go  file.go  file_test.go
dclog/: dclog.go
dcnode/: .gitignore  Makefile.am  Makefile.in  configure  configure.ac  dcnode.go
dcnode/config/: config.go.in
dcnode/ndapi/: dele.go  hello.go  list.go  load.go  ndapi.go  save.go
dcnode/ndcli/: ndcli.go
dcnode/ndsrv/: ndconfig.go  ndconfig.go.in  ndcont.go  ndmain.go
dcnode/ndsrv/ndauth/: ndauth.go
dcnode/ndsrv/ndcontr/: ndcontr.go  nscont_test.go
dcnode/ndsrv/ndreg/: ndreg.go  ndreg_test.go
dcnode/ndsrv/ndstore/: ndstore.go
dcnode/nodeapi/: ndapi.go
dcnode/nodecli/: ndcli.go
dcnode/nodesrv/: ndconfig.go.in  ndcont.go  ndmain.go
dcrpc/: client.go  common.go  context.go  empty.go  exec_test.go  faddr.go  faddr_test.go  fconn.go  header.go  hello_test.go  local_test.go  logger.go  midware.go  packet.go  request.go  response.go  server.go  tools.go  validate.go  xauth.go
docs/: conc-draft.dia  draft01.dia  toplev-draft0.dia
dsalloc/: dsalloc.go  dsalloc_test.go
dscom/: block.go  cfile.go  descrs.go  fsdescrs.go  interfs.go  types.go
dsdescr/: dsdescr.go
dserr/: err.go
fdistr/: Makefile.am  Makefile.in  configure  configure.ac
fdistr/fdapi/: dele.go  hello.go  list.go  load.go  save.go
fdistr/fdcli/: fdcli.go
fdistr/fdsrv/: fdmain.go
fdistr/fdsrv/fdcont/: fdcont.go  fdcont_test.go
fdistr/fdsrv/fdfile/: batch_test.go  block.go  file.go
fstore/: .gitignore  Makefile.am  Makefile.in  README.md  configure  configure.ac  fstore.conf
fstore/fsapi/: baddbstore.go  bdeletebstore.go  blistbstores.go  bstoreapi.go  bupdatebstore.go  dele.go  fdeletefile.go  fgetHello.go  fileapi.go  flistFiles.go  floadfile.go  hello.go  list.go  load.go  save.go  saveFile.go  servapi.go  uadduser.go  ucheckuser.go  udeleteuser.go  ulistusers.go  userapi.go  xupdateUser.go
fstore/fscli/: BENCH.txt  fscli.go  fscli_test.go
fstore/fsfile/: fsbatch.go  fsblock.go  fsblock_test.go  fstank.go  fstool.go
fstore/fssrv/: fsconf.go.in  fsmain.go  fsserv.go
fstore/fssrv/fsauth/: fsauth.go
fstore/fssrv/fsconf/: fsconf.go  fsconf.go.in
fstore/fssrv/fscont/: bstore.go  bstore_test.go  comm.go  comm_test.go  contauth.go  contbstore.go  contcomm.go  contfile.go  contrbstore_test.go  contrcomm.go  contrcomm_test.go  contrfile.go  contrfile_test.go  contruser.go  contruser_test.go  contserv.go  contuser.go  file.go  file_test.go  fscont.go  fscont_test.go  user.go  user_test.go
fstore/fssrv/fsfile/: batch.go  batch_test.go  block.go  block_test.go  file.go  file_test.go  fsbatch.go  fsbatch_test.go  fsblock.go  fsblock_test.go  fscrate.go  fsfile.go  fsfile_test.go  fstool.go
fstore/fssrv/fsrec/: bspool.go  bstore.go  bstore_test.go  comm.go  comm_test.go  file.go  file_test.go  fsrec.go  fsrec_test.go  recbspool.go  recbssaver.go  recbstore.go  recbstore_test.go  reccomm.go  recfile.go  recfile_test.go  recfiledistr.go  recuser.go  recuser_test.go  user.go  user_test.go
fstore/fssrv/fsreg/: bstores.go  bstores_test.go  comm.go  common.go  entries.go  entries_test.go  files.go  files_test.go  fsreg.go  fsreg_test.go  regbatch.go  regbatch_test.go  regblock.go  regblock_test.go  regbstore.go  regbstore_test.go  regcomm.go  regentry.go  regentry_test.go  regfile.go  regfile_test.go  reguser.go  reguser_test.go  users.go  users_test.go
fstore/fssrv/fstore/: storebstore.go  storebstore_test.go  storecomm.go  storefile.go  storefile_test.go  storeuser.go  storeuser_test.go
fstore/initrc/: Makefile.in  fstored.service.in
fstore/initrc/rc.d/: fstored.in
fstore/rc/: Makefile.in
fstore/rc/init.d/: fstored.in
fstore/rc/rc.d/: fstored.in
(+81 files in other folders)
